--- a/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
+++ b/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
@@ -20,17 +20,17 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="337" height="122"/>
+            <rect key="frame" x="0.0" y="0.0" width="425" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <box boxType="custom" cornerRadius="6" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="owU-3U-apJ">
-                    <rect key="frame" x="0.0" y="0.0" width="337" height="122"/>
+                    <rect key="frame" x="0.0" y="0.0" width="425" height="127"/>
                     <view key="contentView" id="bHm-ci-pnm">
-                        <rect key="frame" x="1" y="1" width="335" height="120"/>
+                        <rect key="frame" x="1" y="1" width="423" height="125"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ckC-S0-pnA">
-                                <rect key="frame" x="298" y="103" width="37" height="17"/>
+                                <rect key="frame" x="386" y="108" width="37" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" drawsBackground="YES" id="LEJ-dB-dpq">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" red="0.098039215690000001" green="0.81960784310000001" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -38,7 +38,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0sZ-tq-GuG">
-                                <rect key="frame" x="0.0" y="103" width="37" height="17"/>
+                                <rect key="frame" x="0.0" y="108" width="37" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" drawsBackground="YES" id="8ag-cD-N0K">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" red="0.098039215690000001" green="0.81960784310000001" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -46,7 +46,7 @@
                                 </textFieldCell>
                             </textField>
                             <stackView distribution="equalSpacing" orientation="horizontal" alignment="bottom" spacing="16" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SCT-e3-hXR">
-                                <rect key="frame" x="24" y="12" width="287" height="75"/>
+                                <rect key="frame" x="24" y="12" width="375" height="80"/>
                                 <subviews>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BZc-2L-WWw">
                                         <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
@@ -57,31 +57,48 @@
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="left" id="ZZn-kO-nMk"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="osa-Da-o7A">
-                                        <rect key="frame" x="93.5" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="135" y="0.0" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="osa-Da-o7A" secondAttribute="height" multiplier="1:1" id="0nw-Ac-Xie"/>
                                             <constraint firstAttribute="height" constant="50" id="f3o-5x-MNW"/>
                                         </constraints>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" id="QlY-6R-7OQ"/>
                                     </imageView>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L3D-wN-CQY">
-                                        <rect key="frame" x="212" y="0.0" width="75" height="75"/>
+                                    <box boxType="custom" borderType="line" cornerRadius="4" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="6jf-91-RLS">
+                                        <rect key="frame" x="295" y="0.0" width="80" height="80"/>
+                                        <view key="contentView" id="Qps-RW-9MZ">
+                                            <rect key="frame" x="1" y="1" width="78" height="78"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L3D-wN-CQY">
+                                                    <rect key="frame" x="1.5" y="2" width="75" height="75"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="L3D-wN-CQY" secondAttribute="height" multiplier="1:1" id="hbw-kd-N7c"/>
+                                                        <constraint firstAttribute="height" constant="75" id="sy0-GH-MV3"/>
+                                                    </constraints>
+                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="right" id="rk4-kc-vBH"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="9"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="wantsLayer" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="L3D-wN-CQY" firstAttribute="centerX" secondItem="Qps-RW-9MZ" secondAttribute="centerX" id="MnE-BT-LEm"/>
+                                                <constraint firstItem="L3D-wN-CQY" firstAttribute="centerY" secondItem="Qps-RW-9MZ" secondAttribute="centerY" id="dAc-4c-4PE"/>
+                                            </constraints>
+                                        </view>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="L3D-wN-CQY" secondAttribute="height" multiplier="1:1" id="hbw-kd-N7c"/>
-                                            <constraint firstAttribute="height" constant="75" id="sy0-GH-MV3"/>
+                                            <constraint firstAttribute="width" secondItem="6jf-91-RLS" secondAttribute="height" multiplier="1:1" id="bQn-8G-uVc"/>
+                                            <constraint firstAttribute="height" constant="80" id="wo8-lI-raB"/>
                                         </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="right" id="rk4-kc-vBH"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="9"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="wantsLayer" value="YES"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </imageView>
+                                    </box>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="75" id="fR3-xH-z5m"/>
+                                    <constraint firstAttribute="height" constant="80" id="fR3-xH-z5m"/>
                                 </constraints>
                                 <visibilityPriorities>
                                     <integer value="1000"/>
